<resources>
    <string name="app_name">CodeTime</string>

    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CodeTime</string>
    <string name="nav_header_subtitle">Eat -> Code -> Repeat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="image_type_transition">home_iv to contest_list_iv</string>

    <string name="poster_iv_cd">poster image of contest platform</string>

    <string name="pref_codechef_key">codechef.com</string>
    <string name="pref_codeforces_key">codeforces.com</string>
    <string name="pref_hackerearth_key">hackerearth.com</string>
    <string name="pref_hackerrank_key">hackerrank.com</string>
    <string name="pref_topcoder_key">topcoder.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="credits_text"><b>CodeTime</b> is completely free and <i>open source</i> as this app works only because of <b>Contest List API</b> which is also open source.A big thanks to them (https://clist.by).Check <b>git project</b> here(https://github.com/Ni3verma/CodeTime) and feel free to <i>contribute</i>.\n\nCodeTime uses following <b>libraries</b>:\n1) Awesome android support libraries by google.\n2) Retrofit, Picasso, Room, Work\n3) circle imageView (https://github.com/hdodenhof/CircleImageView)\n\nCodeTime uses <b>logo</b> of some famous platforms such as Hackerrank, Hackerearth, Codeforces, topCoder, Codechef\n\nVarious <b>images</b> are downloaded from freepik.com, canva.com, shutterstock.com, uigradients.com, pixabay.com\n\nAnd finally a big thanks to stackoverflow community and awesome tutorials on youtube and blogs on medium and my udacity android dev nanodegree.\n\nI respect intellectual property of others, and by publishing this app no copyright nor trademark infringement of any sort is intended. If you feel that this app infringes on any of your copyright or trademark, please feel free to mail the issue(canvas.nv@gmail.com)</string>
    <string name="add_to_calendar_button_text">Add to Calendar</string>
    <string name="image_type_cd">contest type image</string>
    <string name="blur_background_image_cd">blur background dummy</string>
    <string name="past_image_cd">past events image</string>
    <string name="past_events">Past Events</string>
    <string name="ongoing_image_cd">ongoing events image</string>
    <string name="ongoing_events">OnGoing Events</string>
    <string name="upcoming_events">UpComing Events</string>
    <string name="future_image_cd">future events image</string>
    <string name="start_date">START DATE</string>
    <string name="end_date">END DATE</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_open_source">Open Source</string>
    <string name="nav_title_github">Github</string>
    <string name="nav_title_credits">Credits</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="nav_title_share_app">Share App</string>
    <string name="nav_title_feedback">Feedback</string>
    <string name="nav_title_rate_app">Rate app</string>

</resources>